@@ -1,0 +1,18 @@
+
+<misc>
+	<size_type>
+		<short> 2 </>
+		<flag>  2 </>
+		<extoffset> 2 </>
+		<dataoffset> 2 </>
+		<varoffset> 2 </>
+		<offset> 2 </>
+		<long> 4 </>
+		<byte> 1 </>
+	</>
+	<offset_munge>
+		<offset/>
+	</>
+</>
+
+		
